# kept

./: README.md  pyproject.toml
examples/: main.py
examples/clients/simple-auth-client/: pyproject.toml
examples/clients/simple-auth-client/mcp_simple_auth_client/: main.py
examples/servers/mcp-simple-essr/: pyproject.toml
examples/servers/mcp-simple-essr/mcp_simple_essr/: server.py
examples/servers/simple-request-response/: pyproject.toml
examples/servers/simple-request-response/keri_essr_simple_request_response/: server.py
scripts/: deploy.sh  upload.py
src/kept/: __init__.py
src/kept/app/cli/: keeper.py
src/kept/app/cli/commands/: get.py
src/kept/core/: authentication.py  exceptions.py
src/kept/core/tcp/: client.py  server.py
src/kept/db/: basing.py
src/kept/essr/client/: __init__.py  client.py  handlers.py  requests.py  responses.py
src/kept/essr/server/: __init__.py  applications.py  datastructures.py  requests.py  responses.py  types.py
src/kept/hk/: configing.py  essring.py
src/kept/mcp/client/: essr.py
src/kept/mcp/server/: essr.py  essr_manager.py
src/kept/mcp/shared/: _essr_utils.py
tests/kept/core/: test_authentication.py
tests/kept/core/tcp/: test_tcp_client.py  test_tcp_server.py
tests/kept/essr/client/: test_async_client.py
